--- a/TestPathDesigner.App/TestPathDesigner.App.csproj
+++ b/TestPathDesigner.App/TestPathDesigner.App.csproj
@@ -19,4 +19,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TestPathDesigner.Testing\TestPathDesigner.Testing.csproj" />
+  </ItemGroup>
+
 </Project>
