Tests for connectionStatus, added connectionStatus to viewmodel and view, added converter to app.xaml

--- a/TestPathDesigner.App/TestPathDesigner.App.csproj
+++ b/TestPathDesigner.App/TestPathDesigner.App.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TestPathDesigner.ConnectionStatusLibrary\TestPathDesigner.ConnectionStatusLibrary.csproj" />
     <ProjectReference Include="..\TestPathDesigner.Testing\TestPathDesigner.Testing.csproj" />
   </ItemGroup>
 
