--- a/TestPathDesigner.App/TestPathDesigner.App.csproj
+++ b/TestPathDesigner.App/TestPathDesigner.App.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Services\Services.csproj" />
+    <ProjectReference Include="..\StyleLibrary\StyleLibrary.csproj" />
     <ProjectReference Include="..\TestPathDesigner.ConnectionStatusLibrary\TestPathDesigner.ConnectionStatusLibrary.csproj" />
     <ProjectReference Include="..\TestPathDesigner.Testing\TestPathDesigner.Testing.csproj" />
   </ItemGroup>
