ConverterLibrary, enable menu only if app selected

--- a/TestPathDesigner.App/TestPathDesigner.App.csproj
+++ b/TestPathDesigner.App/TestPathDesigner.App.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConverterLibrary\ConverterLibrary.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
     <ProjectReference Include="..\StyleLibrary\StyleLibrary.csproj" />
     <ProjectReference Include="..\TestPathDesigner.ConnectionStatusLibrary\TestPathDesigner.ConnectionStatusLibrary.csproj" />
